Added minigame functionality.

--- a/GPRO Framework/project/VisualStudio/GPRO-FW/GPRO-FW.vcxproj.filters
+++ b/GPRO Framework/project/VisualStudio/GPRO-FW/GPRO-FW.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\GPRO-FW\foo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\GPRO-FW\game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GPRO-FW.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\GPRO-FW\foo.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\GPRO-FW\game.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
